<resources>
    <string name="app_name">FociBajnoksag_RXBKK7_beadando</string>
    <string name="email">Email</string>
    <string name="jelszo">Jelszó</string>
    <string name="bejelentkezesgomb">Bejelentkezés</string>
    <string name="regisztraciogomb">Regisztráció</string>
    <string name="bejelentkezesgombvendeg">Belépés vendégként</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="jelszoujra">Jelszó mégegyszer</string>
    <string name="telefonszam">Telefonszám</string>
    <string name="megse">Mégse</string>
    <string name="cim">Cím</string>
    <string name="profilom">Profilom</string>
    <string name="premier_league_tablazat">Premier League Táblázat</string>
    <string name="udvozles">Üdvözöljük a FociBajnokság alkalmazásban!</string>
    <string name="leiras">Ez az alkalmazás a különbző bajnokságok tabelláiról nyújt információkat. Nézze meg a csapatok statisztikáit és vessen pillantást a saját profiljára!</string>
    <string name="premier_league_csapatok">Premier League Csapatok</string>
    <string name="team">Csapat</string>
    <string name="top_scorers">Góllövőlista</string>
    <string name="goals">Gól</string>
    <string name="player_name">Név</string>
    <string name="gollovokPL">Góllövőlista</string>
    <string name="szerkesztes">Profil Szerkesztése</string>
    <string name="Profilkep">Profilkép</string>
    <string name="szerklabel">A fenti gomb és az oldal még szerkesztés alatt áll!</string>
    <string name="liga">Kedvenc Liga</string>
    <string name="ujfhnev">Adja meg új felhasználó nevét!</string>
    <string name="ujcim">Adja meg az új címét!</string>
    <string name="mentes">Mentés</string>
    <string name="vigy_zat_a_t_rl_s_nem_visszavonhat">Vigyázat! A törlés nem visszavonható!</string>
    <string name="szavazat">Szavazat</string>
    <string name="leirasszavazas">A játékosok nevére kattintva lehetőséged van összesen 5 szavazásra, hogy szerinted ki fogja megnyerni a Gólkirályi címet.\nEgyszerre egy játékosra tudsz szavazni.</string>
    <string name="szavazas">Szavazás</string>
    <string name="torles">Profil Törlése</string>
    <string name="legtobb_vereseg">Legtöbb vereség</string>
    <string name="osszes_csapat">Összes csapat</string>
    <string name="legtobb_dontetlen">Legtöbb döntetlen</string>
    <string-array name="ligak">
        <item>Premier League</item>
        <item>BundesLiga</item>
        <item>Ligue 1</item>
        <item>La Liga</item>
        <item>Seria A</item>
        <item>Egyéb</item>
    </string-array>
</resources>