<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/stad_bg"
    tools:context=".IndexActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/soccerball" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/udvozles"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/leiras"
        android:textColor="@color/white"
        android:background="@drawable/hatter_index"
        android:textSize="16sp" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttoncolor"
        android:onClick="profil"
        android:padding="12dp"
        android:text="@string/profilom"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/league_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttoncolor"
        android:onClick="pltablazat"
        android:padding="12dp"
        android:text="@string/premier_league_tablazat"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>