<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/hatter_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/editTextGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/linearlayoutmargin"
        android:layout_marginEnd="@dimen/linearlayoutmargin"
        android:layout_marginTop="130dp"
        android:orientation="vertical"

        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginButton">

        <EditText
            android:id="@+id/editText_Email_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#808080"
            android:textColor="#000000"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/editText_Password_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:background="@drawable/edittext_background"
            android:hint="@string/jelszo"
            android:inputType="textPassword"
            android:textColorHint="#808080"
            android:textColor="#000000"
            android:layout_marginTop="15dp"
            android:importantForAutofill="no"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/bejelentkezesgomb"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/regisztraciogomb"
        android:textColor="#FFFFFF"
        android:onClick="register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/guestLoginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/bejelentkezesgombvendeg"
        android:textColor="#FFFFFF"
        android:onClick="loginAsGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


</androidx.constraintlayout.widget.ConstraintLayout>