<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hatter_profil"
    android:fillViewport="true"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="24dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:id="@+id/profileCard"
                android:src="@drawable/profilpic"
                android:contentDescription="@string/Profilkep"

                />

            <TextView
                android:id="@+id/profilelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Profilkep"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="16dp"
                />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/profilnamelabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/felhasznalonev"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                       />

                    <TextView
                        android:id="@+id/profilnev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/profilemaillabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                       />

                    <TextView
                        android:id="@+id/profilemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/profiltelolabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telefonszam"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                       />

                    <TextView
                        android:id="@+id/profiltelo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/profilligalabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/liga"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:drawablePadding="8dp"
                        />

                    <TextView
                        android:id="@+id/profilliga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profilcimlabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cim"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/profilcim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/editgomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/szerkesztes"
            android:textColor="@color/black"
            android:backgroundTint="@color/gold"
            android:textSize="16sp"
            android:padding="16dp"
            android:onClick="editProfile"
            android:layout_marginTop="8dp"
            />


        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profilom"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:textSize="16sp"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:onClick="deleteProfile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vigy_zat_a_t_rl_s_nem_visszavonhat"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="4dp"/>



    </LinearLayout>
</ScrollView>